--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "DM Sans", system-ui, sans-serif;
+    color: #222222;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   overflow-x: hidden !important;
 }
@@ -10,7 +27,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  background: #002452;
+  /* background: #002452; */
   overflow-x: hidden !important;
   padding: 0 !important;
 }
@@ -19,6 +36,11 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+#root{
+  position: relative;
+  overflow: hidden;
 }
 
 
@@ -166,4 +188,35 @@ input::-webkit-inner-spin-button {
   font-weight: 900;
   font-style: normal;
   font-display: swap;
+}
+
+
+.text-gradient {
+  background: radial-gradient(113.21% 708.28% at -6.84% 100%, #ACFFB7 0%, #0BCAFF 75.45%, #1F93FF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.progress-bar-gradient {
+  background: radial-gradient(113.21% 708.28% at -6.84% 100%, #ACFFB7 0%, #0BCAFF 75.45%, #1F93FF 100%);
+  border-radius: 150px;
+}
+
+.progress-bar-gradient:after {
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  border-radius: 150px;
+  background-image: radial-gradient(155.61% 569.43% at -6.84% 100%, #ACFFB7 0%, #0BCAFF 75.45%, #1F93FF 100%);
+  padding: 2px;
+  /* This determines the border thickness */
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
 }
